# imsz

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  gentests.py  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: docs.yml  test.yml
c/: Cargo.toml  Doxyfile  Makefile  Makefile.msvc  annotated.html  annotated_dup.js  classes.html  doxygen-msearchbox-fix.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  header.html  imsz.h  imsz_8h.html  imsz_8h.js  imsz_8h__incl.map  imsz_8h_source.html  index.dox  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structImInfo-members.html  structImInfo.html  structImInfo.js
c/examples/: imsz.c  imsz.cpp  imsz.py
c/html/: files_dup.js  imsz_8h.html  imsz_8h__incl.dot  imsz_8h__incl.md5  navtreedata.js
c/html/search/: all_0.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  pages_0.js  typedefs_0.js
c/search/: all_1.js  all_2.js  all_3.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
c/src/: lib.rs
examples/: imsz.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/imsz/: trait.Imsz.js
imsz/: all.html  enum.ImError.html  enum.ImFormat.html  fn.imsz.html  fn.imsz_from_path.html  fn.imsz_from_reader.html  index.html  sidebar-items.js  struct.ImInfo.html  trait.Imsz.html  type.ImResult.html
search.desc/imsz/: imsz-desc-0-.js
src/: lib.rs
src/imsz/: lib.rs.html
testdata/: image.dib  image.ilbm  image.jp2  image_be.tiff
tests/: broken_files.rs  fmt.rs  ok_files.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/imsz/: trait.Imsz.js
type.impl/core/result/: enum.Result.js
(+2 files in other folders)
