[package]
name = "imsz"
version = "0.2.0"
authors = [
    "Paulo Scardine <paulo@scardine.com.br>",
    "Mathias Panzenböck <grosser.meister.morti@gmx.net>"
]
repository = "https://github.com/panzi/imsz"
edition = "2021"

[lib]
name = "imsz"
path = "src/lib.rs"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
clap = { version = "3.1.8", features = ["derive"] }
