[package]
name = "imsz"
version = "0.2.0"
authors = [
    "Paulo Scardine <paulo@scardine.com.br>",
    "Mathias Panzenböck <grosser.meister.morti@gmx.net>"
]
repository = "https://github.com/panzi/imsz"
documentation = "https://panzi.github.io/imsz/imsz/"
license = "MIT"
edition = "2021"
keywords = [ "image", "metadata" ]

[lib]
name = "imsz"
path = "src/lib.rs"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
clap = { version = "3.1.8", features = ["derive"] }
