[package]
name = "imsz_c"
description = "Get width and height from an image file reading as few bytes as possible."
version = "0.3.0"
authors = [
    "Paulo Scardine <paulo@scardine.com.br>",
    "Mathias Panzenböck <grosser.meister.morti@gmx.net>"
]
repository = "https://github.com/panzi/imsz"
documentation = "https://panzi.github.io/imsz/imsz/"
license = "MIT"
edition = "2021"
keywords = [ "image", "metadata" ]
categories = [ "multimedia::images" ]
exclude = [
    ".*", "perf.data", "perf.data.old",
    "doxygen-awesome-css", "Doxygen",
    "doxygen-msearchbox-fix.css", "header.html"
]

[lib]
name = "imsz"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[profile.release]
strip = "debuginfo"

[dependencies]
imsz = { path = ".." }
libc = "0.2"
